agregue el header

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>Gastro Latino</title>
 </head>
 <body>     
-        <h1>Gastro latino</h1>
+    <header> <h1>Gastro latino</h1>  </header>
         
+
 
     
 </body>
