--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>     
     <header> <h1>Gastro latino</h1>  </header>
         
-
+    <img src="imagenes/comidas Argentinas/argentina.png" alt="argentina">
 
     
 </body>
