cambios img arg

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <header> <h1>Gastro latino</h1>  </header>
         
     <img src="imagenes/comidas Argentinas/argentina.png" alt="argentina">
-
+    <img src="/imagenes/comidas Argentinas/argentina.png" alt="argentina">
+    <img src="./imagenes/comidas Argentinas/argentina.png" alt="argentina">
+    <img src="https://estebansalinas50.github.io/Integrador-WEB/imagenes/comidas Argentinas/argentina.png" alt="argentina">
+    <img src="http://127.0.0.1:5500/imagenes/comidas Argentinas/argentina.png" alt="argentina">
     
 </body>
 </html>
