--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1> Gastro latino</h1>     
     </header>
 
-    <h2> Elija un pais para saber mas sobre su gastronomia local</h2>
+    <h2 id="sub"> Elija un pais para saber mas sobre su gastronomia local</h2>
 
     <div id="contenedor">
         <a href="peru.html"> <img  src="imagenes/comidas Peruanas/peru.png" alt="peru" height="120px"></a>
