--- a/brasil.html
+++ b/brasil.html
@@ -19,5 +19,8 @@
         La palabra misma proviene de las lenguas bantúes, y posiblemente significara "los gestos, comportamiento y humor típicos de las chicas adolescentes"
         probando
      </p>
+     <div>
+        <img src="imagenes/comidas Brasileras/quindim.jpg" alt="">
+     </div>
 </body>
 </html>
