--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 </head>
 <body>     
     <header>
-        <h1> Gastro latino</h1> 
-        <p>Menu</p>    
+        <p class="menu">Menu</p>   
+        <h1 class="titulo"> Gastro latino</h1> 
+        <p class="regis"> Registrarse</p>
+       
     </header>
-
+       
     <h2 id="sub"> Elija un pais para saber mas sobre su gastronomia local</h2>
 
     <div id="contenedor">
