--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>     
     <header>
-        <button ><img id="imagen" src="imagenes/iconos/menu.png" alt="menu" height="50px"></button>   
+        <button><img src="imagenes/iconos/menu.png" alt="menu"></button>   
         <h1 class="titulo"> Gastro latino</h1> 
         <p class="regis"> Registrarse</p>
        
