--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>     
     <header>
-        <button><img src="imagenes/iconos/menu.png" alt="menu"></button>   
-        <h1 class="titulo"> Gastro latino</h1> 
-        <p class="regis"> Registrarse</p>
+        <button id="menu" type="submit"><img src="imagenes/iconos/menu.png" alt="menu"></button>   
+        <h1 class="titulo"> G a s t r o L a t i n o</h1> 
+        <button id="registro"><img src="imagenes/iconos/regi.png" alt="registro"></button>
        
     </header>
        
