--- a/brasil.html
+++ b/brasil.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/brasil.css">
+    <script src="js/brasil.js"></script>
     <title>Gastro Brasileira</title>
 </head>
 <body>
@@ -20,8 +21,14 @@
         La palabra misma proviene de las lenguas bantúes, y posiblemente significara "los gestos, comportamiento y humor típicos de las chicas adolescentes"
         probando
      </p>
-     <div>
-        <img src="imagenes/comidas Brasileras/quindim.jpg" alt="">
-     </div>
+     <div class="contenedor">
+        <div class="atras botones">
+            &#60
+        </div>
+        <div class="siguiente botones">
+            &#62
+        </div>
+        <img src="/imagenes/comidas Brasileras/quindim.jpg" alt="" id="imagen">
+    </div>
 </body>
 </html>
