--- a/index.html
+++ b/index.html
@@ -22,9 +22,22 @@
         <a href="brasil.html"> <img src="imagenes/comidas Brasileras/brasil.png" alt="brasil" height="120px"></a>
     </div>
    
-    <div>
-        
+    <div id="top">
+        <p>Top Receta de cada pais</p>
+        <table>
+           <tr>
+            <th>Brasil</th>
+            <th>Argentina</th>
+            <th>Peru</th>           
+           </tr>
 
+           <tr>
+            <td><a href="brasil.html" ><img src="imagenes/comidas Brasileras/quindim.jpg" alt="comida"></a></td>
+            <td><a href="argentina.html"><img src="imagenes/comidas Argentinas/asado.jpg" alt="asado"></a></td>
+            <td><a href="peru.html"><img src="imagenes/comidas Peruanas/ceviche.jpg" alt="ceviche"></a></td>
+           </tr>
+
+        </table>
         
     </div>
 
