--- a/brasil.html
+++ b/brasil.html
@@ -28,7 +28,7 @@
         <div class="siguiente botones">
             &#62
         </div>
-        <img src="/imagenes/comidas Brasileras/quindim.jpg" alt="" id="imagen">
+        <img src="imagenes/comidas Brasileras/quindim.jpg" alt="" id="imagen">
     </div>
 </body>
 </html>
