--- a/argentina.html
+++ b/argentina.html
@@ -7,7 +7,17 @@
     <title>Document</title>
 </head>
 <body>
-    
+   <h1>Argentina</h1>
+
+    <div id="Asado">
+        <p>Los tradicionales habitantes del campo, los gauchos, son especialistas en la elaboración del "asado a la cruz", "asado al asador" o "asado a la estaca", esto es, las porciones de carne colgadas en un asador de hierro que se clava en la tierra alrededor de un fogón de leña. Un asado correctamente preparado requiere varias horas de fuego y trabajo. El modo de comerlo aceptado en estas regiones es "al pan", en el que solo se utiliza el pan para tomar la carne y un facón para cortarla. También se come "al plato" con cuchillo y tenedor.
+            Los cortes más comunes son la costilla ("tira de asado") y el vacío. En las ciudades, la forma de preparación es menos rústica. Es muy común el uso del carbón vegetal para generar un rápido fuego en la zona este de la Argentina. Los asadores más reconocidos se oponen a las parrillas con tapa por considerar que alteran el normal proceso de cocción.           
+            También es típico el "cordero a la estaca" o "cordero a la cruz" (un cordero entero clavado en un armazón de hierro en forma de "I", a la que se le suele llamar "cruz"), tradicional de la región de la Patagonia, el lechón y el asado con cuero (una vaca entera, a la que no se le ha quitado el cuero). En regiones costeras, sobre todo en Tierra del Fuego, se suele hacer pescados y mariscos a la parrilla.           
+            También en la región patagónica se utiliza el llamado chulengo, que es un tambor de combustible de 200 litros cortado al medio en forma longitudinal, al que se le adosan bisagras y una parrilla en su interior.            
+            Si bien los asados más conocidos se realizan con carnes de vaca, cordero y chivito (cabrito), debe recordarse la frase citada en el Martín Fierro: "Todo bicho que camina va a parar al asador", puede añadirse</p>
+
+
+    </div>
 
 
     
