--- a/brasil.html
+++ b/brasil.html
@@ -23,12 +23,19 @@
      </p>
      <div class="contenedor">
         <div class="atras botones">
-            &#60
+            &#60;
         </div>
         <div class="siguiente botones">
-            &#62
+            &#62;
         </div>
         <img src="imagenes/comidas Brasileras/quindim.jpg" alt="" id="imagen">
+    </div>
+    <div class="briga">
+        <h1>Brigadeiros</h1>
+        Brigadeiro es un dulce típico de la gastronomía brasileña, creado en la década de 1940, en Río de Janeiro.<br>
+        Es común en todo el país y está presente en prácticamente todas las fiestas de cumpleaños, junto con el Cajuzinho y el Beijinho
+        <h3>Historia</h3>
+        <h1></h1>
     </div>
 </body>
 </html>
