cambios dos carruseles

--- a/argentina.html
+++ b/argentina.html
@@ -12,42 +12,76 @@
 <body>
     <h1>Argentina</h1>
 
-    <h2>Asado</h2>
-    
-        <div id="Asado">
-            <p>Los tradicionales habitantes del campo, los gauchos, son especialistas en la elaboración del "asado a la
-                cruz", "asado al asador" o "asado a la estaca", esto es, las porciones de carne colgadas en un asador de
-                hierro que se clava en la tierra alrededor de un fogón de leña. Un asado correctamente preparado
-                requiere varias horas de fuego y trabajo. El modo de comerlo aceptado en estas regiones es "al pan", en
-                el que solo se utiliza el pan para tomar la carne y un facón para cortarla. También se come "al plato"
-                con cuchillo y tenedor.
-                Los cortes más comunes son la costilla ("tira de asado") y el vacío. En las ciudades, la forma de
-                preparación es menos rústica. Es muy común el uso del carbón vegetal para generar un rápido fuego en la
-                zona este de la Argentina. Los asadores más reconocidos se oponen a las parrillas con tapa por
-                considerar que alteran el normal proceso de cocción.
-                También es típico el "cordero a la estaca" o "cordero a la cruz" (un cordero entero clavado en un
-                armazón de hierro en forma de "I", a la que se le suele llamar "cruz"), tradicional de la región de la
-                Patagonia, el lechón y el asado con cuero (una vaca entera, a la que no se le ha quitado el cuero). En
-                regiones costeras, sobre todo en Tierra del Fuego, se suele hacer pescados y mariscos a la parrilla.
-                También en la región patagónica se utiliza el llamado chulengo, que es un tambor de combustible de 200
-                litros cortado al medio en forma longitudinal, al que se le adosan bisagras y una parrilla en su
-                interior.
-                Si bien los asados más conocidos se realizan con carnes de vaca, cordero y chivito (cabrito), debe
-                recordarse la frase citada en el Martín Fierro: "Todo bicho que camina va a parar al asador", puede
-                añadirse</p>
-        </div>
-   
-        <div class="contenedor">
-            <div class="atras botones"> 
-                &#60
-            </div>
-            <div class="adelante botones">
-                &#62
-            </div>
+    <h2>ASADO</h2>
 
-            <img src="imagenes/comidas Argentinas/asado.jpg" alt="asado" id="imagen">
+    <div class="textos">
+        <p>Los tradicionales habitantes del campo, los gauchos, son especialistas en la elaboración del "asado a la
+            cruz", "asado al asador" o "asado a la estaca", esto es, las porciones de carne colgadas en un asador de
+            hierro que se clava en la tierra alrededor de un fogón de leña. Un asado correctamente preparado
+            requiere varias horas de fuego y trabajo. El modo de comerlo aceptado en estas regiones es "al pan", en
+            el que solo se utiliza el pan para tomar la carne y un facón para cortarla. También se come "al plato"
+            con cuchillo y tenedor.
+            Los cortes más comunes son la costilla ("tira de asado") y el vacío. En las ciudades, la forma de
+            preparación es menos rústica. Es muy común el uso del carbón vegetal para generar un rápido fuego en la
+            zona este de la Argentina. Los asadores más reconocidos se oponen a las parrillas con tapa por
+            considerar que alteran el normal proceso de cocción.
+            También es típico el "cordero a la estaca" o "cordero a la cruz" (un cordero entero clavado en un
+            armazón de hierro en forma de "I", a la que se le suele llamar "cruz"), tradicional de la región de la
+            Patagonia, el lechón y el asado con cuero (una vaca entera, a la que no se le ha quitado el cuero). En
+            regiones costeras, sobre todo en Tierra del Fuego, se suele hacer pescados y mariscos a la parrilla.
+            También en la región patagónica se utiliza el llamado chulengo, que es un tambor de combustible de 200
+            litros cortado al medio en forma longitudinal, al que se le adosan bisagras y una parrilla en su
+            interior.
+            Si bien los asados más conocidos se realizan con carnes de vaca, cordero y chivito (cabrito), debe
+            recordarse la frase citada en el Martín Fierro: "Todo bicho que camina va a parar al asador", puede
+            añadirse</p>
+    </div>
 
+    <div class="contenedor">
+        <div class="atras botones">
+            &#60
         </div>
+        <div class="adelante botones">
+            &#62
+        </div>
+
+        <img src="imagenes/comidas Argentinas/asado.jpg" alt="asado" id="imagen">
+
+    </div>
+
+    <h2>Revuelto Gramajo</h2>
+
+    <div class="textos">
+        <p>Una de las versiones sobre la creación de este plato culinario dice que este nació por casualidad cuando dos
+            personajes de la noche porteña, Arturo y Horacio Gramajo, hijo de quien fuera intendente de la ciudad de
+            Buenos Aires durante la presidencia de Victorino de la Plaza, embajador en Gran Bretaña y Francia y quien
+            hizo construir, para utilizarlo como viviendas de alquiler, el Pasaje de la Piedad, hicieron una preparación
+            en el restaurante Río Bamba, mezclando jamón, bastones de papa cortadas en hilachas, doradas en una sartén
+            con muy poco aceite y una pizca de manteca y unieron esa preparación con huevo. El resultado, un revuelto
+            húmedo, fue bautizado como revuelto de Gramajo, por los dueños del lugar.
+            En la preparación de este plato se debe cuidar que los ingredientes queden "a punto": ni algo crudos, ni
+            algo quemados. Para esto el recipiente del sofrito (por ejemplo una sartén) debe estar muy limpio, con una
+            pequeña cantidad de aceite y allí los ingredientes deben ser revueltos rápida y rítmicamente hasta que su
+            cocción sea homogénea y presenten las cualidades organolépticas más apropiadas.
+            A los huevos se les puede agregar un poco de crema de leche, que aseguran su imprescindible cremosidad. Las
+            papas deben servirse bien apartadas del huevo en el mismo plato, para asegurar que se mantengan crocantes.
+            Se pueden admitir unas papas rejilla, siempre que estén bien cocidas y crocantes. No deben estar húmedas.
+            Los huevos revueltos, la mejor forma de hacerlos es cascándolos directamente en la sartén y rompiéndolos con
+            una cuchara de madera.
+            ​</p>
+    </div>
+
+    <div class="contenedor1">
+        <div class="atras botones">
+            &#60
+        </div>
+        <div class="adelante botones">
+            &#62
+        </div>
+
+        <img src="imagenes/comidas Argentinas/revuelto-gramajo.jpg" alt="revuelto" id="imagen">
+
+    </div>
 
 
 
