--- a/brasil.html
+++ b/brasil.html
@@ -114,6 +114,24 @@
             En otros países el Brigadeiro es conocido como “trufa Brasileña.”</p>
 
     </div>
+    <div class="brigadeiroBrasil">
+
+        <div class="atras botones">
+
+            
+            <img src="imagenes/iconos/atras.png" alt="">
+
+        </div>
+
+        <div class="siguiente botones">
+            
+            <img src="imagenes/iconos/siguiente.png" alt="">
+
+        </div>
+
+        <img src="imagenes/comidas Brasileras/brigadeiros.jpg" alt="" id="imagen">
+
+    </div>
 
     <div class="ingre">
 
