--- a/argentina.html
+++ b/argentina.html
@@ -83,6 +83,51 @@
 
     </div>
 
+    <h2>Empanadas</h2>
+
+    <div class="textos">
+        <p>
+            Las empanadas argentinas tienen, por lo general, forma de semicírculo de no más de 20 cm de diámetro y están
+            cerradas por un repulgo o simba (llamado repulgue), que muchas veces presenta distintas formas que permiten
+            identificar el sabor del relleno. El relleno (también conocido como recado o carbonada) varía de provincia
+            en provincia, aunque los más comunes son carne vacuna, pollo, humita, jamón y queso y verdura (generalmente
+            acelga o espinaca) con queso o salsa blanca. Las empanadas de carne suelen llevar cebolla, huevo duro
+            picado, aceitunas y, en algunas provincias, pasas de uva, papas o arvejas. Se condimentan con comino,
+            pimentón dulce y ají molido y, para que sean más jugosas, se les agrega grasa de pella. En las zonas
+            rurales, también se usa carne de vizcacha, mulita, carpincho, yacaré o ñandú. Durante Semana Santa se
+            consumen empanadas de vigilia, rellenas de atún. También hay versiones dulces —llamadas empanadillas en el
+            norte del país— hechas con dulce de membrillo, de batata o dulce de leche.
+            Las variedades más conocidas son:
+            Tucumanas: se caracterizan por ser muy jugosas. La masa se hace con harina de trigo, agua y grasa de
+            pella​ y se deja leudar. El relleno es de carne vacuna (muchas veces matambre) cortada a cuchillo,
+            mondongo, gallina o pollo, cebolla, pimentón y huevo duro picado, con abundante comino. Las empanadas
+            tucumanas se cocinan en un horno de barro o se fríen en una olla de hierro con grasa de pella. En las zonas
+            a mayor altitud se utiliza la carne de llama.
+            En la provincia de Buenos Aires y en la ciudad de Buenos Aires, las empanadas son muy parecidas a las
+            tucumanas, aunque algo más grandes. Los rellenos más comunes son carne de vaca, pollo, humita, verdura y
+            jamón y queso. Las empanadas de carne suelen llevar cebolla, huevo duro, aceitunas, pasas de uva y comino.
+            Por lo general son al horno, aunque también se consumen fritas.
+            Catamarqueñas y riojanas: se hacen con carne de vaca o de cabra con ajo, papas, cebolla y aceitunas.
+            Chaqueñas: son muy parecidas a las tucumanas, pero se agrega carne de cordero al relleno.
+            Cordobesas: son agridulces. Tienen azúcar espolvoreada sobre las tapas, y pasas de uva y papas en el
+            relleno.
+            Salteñas. Estas empanadas se rellenan con un gígote hecho con carne de vaca picada a cuchillo, charque,
+            trozos de papa, huevo duro y ciboulette. A veces se les incorpora caldo. Se las suele acompañar con una
+            mezcla de puré de tomate y ají picante (cayena). En las zonas a mayor altitud se usa la carne de llama.
+        </p>
+    </div>
+
+    <div class="contenedor2">
+        <div class="atras botones">
+            &#60
+        </div>
+        <div class="adelante botones">
+            &#62
+        </div>
+
+        <img src="imagenes/comidas Argentinas/empanadas.png" alt="empanadas" id="imagen">
+    </div>
+
 
 
 </body>
