--- a/argentina.html
+++ b/argentina.html
@@ -97,20 +97,20 @@
             rurales, también se usa carne de vizcacha, mulita, carpincho, yacaré o ñandú. Durante Semana Santa se
             consumen empanadas de vigilia, rellenas de atún. También hay versiones dulces —llamadas empanadillas en el
             norte del país— hechas con dulce de membrillo, de batata o dulce de leche.
-            Las variedades más conocidas son:
+            Las variedades más conocidas son: <br>
             Tucumanas: se caracterizan por ser muy jugosas. La masa se hace con harina de trigo, agua y grasa de
             pella​ y se deja leudar. El relleno es de carne vacuna (muchas veces matambre) cortada a cuchillo,
             mondongo, gallina o pollo, cebolla, pimentón y huevo duro picado, con abundante comino. Las empanadas
             tucumanas se cocinan en un horno de barro o se fríen en una olla de hierro con grasa de pella. En las zonas
-            a mayor altitud se utiliza la carne de llama.
+            a mayor altitud se utiliza la carne de llama. <br>
             En la provincia de Buenos Aires y en la ciudad de Buenos Aires, las empanadas son muy parecidas a las
             tucumanas, aunque algo más grandes. Los rellenos más comunes son carne de vaca, pollo, humita, verdura y
             jamón y queso. Las empanadas de carne suelen llevar cebolla, huevo duro, aceitunas, pasas de uva y comino.
-            Por lo general son al horno, aunque también se consumen fritas.
+            Por lo general son al horno, aunque también se consumen fritas. <br>
             Catamarqueñas y riojanas: se hacen con carne de vaca o de cabra con ajo, papas, cebolla y aceitunas.
-            Chaqueñas: son muy parecidas a las tucumanas, pero se agrega carne de cordero al relleno.
+            Chaqueñas: son muy parecidas a las tucumanas, pero se agrega carne de cordero al relleno. <br>
             Cordobesas: son agridulces. Tienen azúcar espolvoreada sobre las tapas, y pasas de uva y papas en el
-            relleno.
+            relleno. <br>
             Salteñas. Estas empanadas se rellenan con un gígote hecho con carne de vaca picada a cuchillo, charque,
             trozos de papa, huevo duro y ciboulette. A veces se les incorpora caldo. Se las suele acompañar con una
             mezcla de puré de tomate y ají picante (cayena). En las zonas a mayor altitud se usa la carne de llama.
@@ -128,6 +128,76 @@
         <img src="imagenes/comidas Argentinas/empanadas.png" alt="empanadas" id="imagen">
     </div>
 
+    <h2>Locro</h2>
+    <div class="textos">
+        <p> En Argentina su consumo se ha extendido desde el Noroeste y Cuyo hacia el resto del país. En la provincia
+            argentina del Neuquén además del locro de maíz se prepara una especie de locro con arvejas, y en el Noreste
+            argentino se prepara también el locro sobre la base de la mandioca.
+            Aunque el locro argentino tiene orígenes indoamericanos, su preparación argentina desde al menos hace tres
+            siglos sintetiza los aportes gastronómicos europeos: por ejemplo el chancho, los chorizos, mondongo y
+            numerosos aliños han sido aportados por los europeos (especialmente por los españoles).
+            Hay varios tipos clásicos de locro, aunque el más extendido y típico es de maíz blanco, porotos blancos o
+            porotos pallar, zapallo y productos cárnicos vacunos y porcinos. También existen variantes con mandioca e
+            incluso con el grano del trigo.
+            Así al locro argentino se lo prepara según multitud de recetas, siendo lo único invariable su base vegetal y
+            el procedimiento de cocción, a fuego lento durante varias horas. De acuerdo a la región se lo prepara con
+            carne de vacuno fresca o seca (charqui), vísceras como la tripa gorda o el chinchulín, embutidos y costillas
+            o despojos de chancho (manos, patas, cola, orejas y cuero, tocino, grasa de pella); las carnes se cuecen por
+            separado y se añaden luego al preparado de vegetales entre los que suele destacarse el zapallo
+            (especialmente el redondo de cáscara grisácea llamado por esto zapallo plomo), que suele dar color amarillo
+            al locro, y granos de maíz blanco, porotos e incluso granos de trigo –en Argentina se prefiere el locro con
+            granos de maíz blanco y al locro basado en granos de maíz triturados se le llama frangollo–, vegetales que
+            por el almidón presente en sus componentes hacen que el preparado alcance la densidad de una crema.
+            Sustancioso y nutritivo es un plato típico del invierno. Se lo adereza de manera acorde, con una salsa
+            picante preparada a base de aceite (o grasa), ají molido, pimentón, cebolla de verdeo y sal, llamada
+            quiquirimichi. <br>
+
+            El locro suculento (denso y con variados y abundantes ingredientes) suele recibir el nombre de locro
+            pulsudo; por contraparte, se llama huaschalocro, es decir "locro pobre" sin carne o uascha locro (del
+            quechua: wakcha luqru), al locro "liviano" preparado con el mínimo de ingredientes y con una consistencia
+            chirle. Una variedad gastronómica próxima al huaschalocro es el mote.
+
+            También se denomina «pulsudo» en Argentina al locro que además de ser sustancioso y pletórico en calorías
+            está muy condimentado, como el locro con ají cumbarí como ocurre en ciertas zonas del Noroeste argentino y
+            en especial en ciertas zonas de la provincia argentina de La Rioja </p>
+    </div>
+
+    <div class="contenedor3">
+        <div class="atras botones">
+            &#60
+        </div>
+        <div class="adelante botones">
+            &#62
+        </div>
+        <img src="imagenes/comidas Argentinas/locro.png" alt="locrito" id="imagen">
+    </div>
+
+    <h2>Milanesas</h2>
+    <div class="textos">
+        <p>
+            El sándwich​ de milanesa es un plato típico en la gastronomía argentina. Se compone de dos rebanadas de pan
+            entre las cuales se coloca una milanesa, lechuga, tomate y ocasionalmente cebolla; lleva como aderezo
+            distintas salsas como mayonesa, mostaza o kétchup. Coloquialmente se lo denomina también sánguche de
+            milanesa, familiar de milanesa o milanesa al pan. <br>
+            En la provincia de Tucumán se destaca una variedad propia de este sándwich, ya que se consume generalmente
+            caliente. En su preparación se utiliza un pan especial (conocido como "sanguchero"; mezcla entre el pebete y
+            el pan francés) el cual es tostado ligeramente instantes antes de la preparación del sándwich, dándole así
+            una consistencia algo crocante. La milanesa (frita, no horneada) se acompaña de tomate cortado finamente,
+            lechuga picada (usualmente de variedad repollada) y cebolla salteada o cruda; además se le agrega picante de
+            ají, o chimichurri. Este sándwich (vulgarmente llamado "milanga") se vende en sandwicherías (sangucherías es
+            la manera popular de llamarlas), puestos de comida rápida de gestión familiar.
+        </p>
+    </div>
+    <div class="contenedor4">
+        <div class="atras botones">
+            &#60
+        </div>
+        <div class="adelante botones">
+            &#62
+        </div>
+
+        <img src="imagenes/comidas Argentinas/milanesas-a-caballo.jpg" alt="milanga" id="imagen">
+    </div>
 
 
 </body>
