super cambios argentinas

--- a/argentina.html
+++ b/argentina.html
@@ -37,6 +37,19 @@
             añadirse</p>
     </div>
 
+    <div class="ingres">
+        <h3> Ingredientes para el asado</h3>
+        <ul>
+            <li>Carne vacuna(Vacio,Falda,tira de asado)</li>
+            <li> Chorizos</li>
+            <li>Mollejas</li>
+            <li>Morcillas</li>
+
+        </ul>
+    </div>
+
+
+
     <div class="contenedor">
         <div class="atras botones">
             &#60
@@ -69,6 +82,22 @@
             Los huevos revueltos, la mejor forma de hacerlos es cascándolos directamente en la sartén y rompiéndolos con
             una cuchara de madera.
             ​</p>
+    </div>
+
+    <div class="ingres">
+        <h3>Ingredientes para el revuelto gramajo</h3>
+        <ul>
+            <li>4 huevos</li>
+            <li>50g de jamon cocido</li>
+            <li>Sal y Pimienta</li>
+            <li>2 Papa</li>
+            <li>1 cebolla</li>
+            <li>Perejil picado</li>
+            <li>Opcional(Morron)</li>
+        </ul>
+
+
+
     </div>
 
     <div class="contenedor1">
@@ -117,6 +146,24 @@
         </p>
     </div>
 
+    <div class="ingres">
+        <h3>Ingredientes para las empanadas(clasicas)</h3>
+        <ul>
+            <li>Carne de vaca</li>
+            <li>1,8 kg de cebolla picada</li>
+            <li>300 g de verdeo picado</li>
+            <li>1,5 kg de carne picada</li>
+            <li>12 huevos duros</li>
+            <li>aceitunas</li>
+            <li>aji molido</li>
+            <li>Pimienta blanca y sal</li>
+            <li>oregano</li>
+            <li>comino</li>
+            <li>pimenton</li>
+            <li>cebolla de verdeo</li>
+        </ul>
+    </div>
+
     <div class="contenedor2">
         <div class="atras botones">
             &#60
@@ -161,6 +208,28 @@
             está muy condimentado, como el locro con ají cumbarí como ocurre en ciertas zonas del Noroeste argentino y
             en especial en ciertas zonas de la provincia argentina de La Rioja </p>
     </div>
+    <div class="ingres">
+        <h3>Ingredientes para el locro</h3>
+        <ul>
+            <li>300 gr de maíz blanco partido</li>
+            <li>00 gr de poroto pallares blanco</li>
+            <li>200 gr de panceta</li>
+            <li>150 gr de chorizo criollo</li>
+            <li>1/2 chorizo colorado</li>
+            <li>200 gr de pechito de cerdo</li>
+            <li>200 gr de falda</li>
+            <li>1 cebolla</li>
+            <li>500 gr de calabaza</li>
+        </ul>
+        <h3>Ingredientes para la salsa picante</h3>
+        <ul>
+            <li>100 g de cebolla de verdeo picada</li>
+            <li>1 taza de aceite mezcla</li>
+            <li>Pimentón y ají molido a gusto</li>
+            <li>1/2 taza de agua</li>
+
+        </ul>
+    </div>
 
     <div class="contenedor3">
         <div class="atras botones">
@@ -187,6 +256,28 @@
             ají, o chimichurri. Este sándwich (vulgarmente llamado "milanga") se vende en sandwicherías (sangucherías es
             la manera popular de llamarlas), puestos de comida rápida de gestión familiar.
         </p>
+    </div>
+
+    <div class="ingres">
+        <h3>Ingrediente para la milanesa</h3>
+        <ul>
+            <li>4 huevos</li>
+            <li>2 dientes de ajo</li>
+            <li>Perejil picado</li>
+            <li>Sal y pimienta, a gusto</li>
+            <li>Pan rallado</li>
+            <li>1 kilo de nalga o peceto para milanesa</li>
+        </ul>
+        <h3>Acompañamientos de una milanesa</h3>
+        <ul>
+            <li>En un sandwich</li>
+            <li>A caballo(lleva un huevo arriba de la milanesa)</li>
+            <li>Napolitana(la milanesa lleva salsa y queso)</li>
+            <li>Papas fritas</li>
+
+        </ul>
+
+
     </div>
     <div class="contenedor4">
         <div class="atras botones">
