--- a/argentina.html
+++ b/argentina.html
@@ -37,30 +37,32 @@
             añadirse</p>
     </div>
 
-    <div class="ingres">
-        <h3> Ingredientes para el asado</h3>
-        <ul>
-            <li>Carne vacuna(Vacio,Falda,tira de asado)</li>
-            <li> Chorizos</li>
-            <li>Mollejas</li>
-            <li>Morcillas</li>
+    <section class="ingres">
+        <div>
+            <h3> Ingredientes para el asado</h3>
+            <ul>
+                <li>Carne vacuna(Vacio,Falda,tira de asado)</li>
+                <li> Chorizos</li>
+                <li>Mollejas</li>
+                <li>Morcillas</li>
 
-        </ul>
-    </div>
-
-
-
-    <div class="contenedor">
-        <div class="atras botones">
-            &#60
+            </ul>
         </div>
-        <div class="adelante botones">
-            &#62
+    </section>
+
+    <section class="contenedor">
+        <div>
+            <div class="atras botones">
+                &#60
+            </div>
+            <div class="adelante botones">
+                &#62
+            </div>
+
+            <img src="imagenes/comidas Argentinas/asado.jpg" alt="asado" id="imagen">
+
         </div>
-
-        <img src="imagenes/comidas Argentinas/asado.jpg" alt="asado" id="imagen">
-
-    </div>
+    </section>
 
     <h2>Revuelto Gramajo</h2>
 
@@ -84,7 +86,8 @@
             ​</p>
     </div>
 
-    <div class="ingres">
+
+    <section class="ingres">
         <h3>Ingredientes para el revuelto gramajo</h3>
         <ul>
             <li>4 huevos</li>
@@ -95,12 +98,9 @@
             <li>Perejil picado</li>
             <li>Opcional(Morron)</li>
         </ul>
+    </section>
 
-
-
-    </div>
-
-    <div class="contenedor1">
+    <section class="contenedor1">
         <div class="atras botones">
             &#60
         </div>
@@ -110,7 +110,7 @@
 
         <img src="imagenes/comidas Argentinas/revuelto-gramajo.jpg" alt="revuelto" id="imagen">
 
-    </div>
+    </section>
 
     <h2>Empanadas</h2>
 
@@ -145,35 +145,38 @@
             mezcla de puré de tomate y ají picante (cayena). En las zonas a mayor altitud se usa la carne de llama.
         </p>
     </div>
-
-    <div class="ingres">
-        <h3>Ingredientes para las empanadas(clasicas)</h3>
-        <ul>
-            <li>Carne de vaca</li>
-            <li>1,8 kg de cebolla picada</li>
-            <li>300 g de verdeo picado</li>
-            <li>1,5 kg de carne picada</li>
-            <li>12 huevos duros</li>
-            <li>aceitunas</li>
-            <li>aji molido</li>
-            <li>Pimienta blanca y sal</li>
-            <li>oregano</li>
-            <li>comino</li>
-            <li>pimenton</li>
-            <li>cebolla de verdeo</li>
-        </ul>
-    </div>
-
-    <div class="contenedor2">
-        <div class="atras botones">
-            &#60
+    <section class="ingres">
+        <div>
+            <h3>Ingredientes para las empanadas(clasicas)</h3>
+            <ul>
+                <li>Carne de vaca</li>
+                <li>1,8 kg de cebolla picada</li>
+                <li>300 g de verdeo picado</li>
+                <li>1,5 kg de carne picada</li>
+                <li>12 huevos duros</li>
+                <li>aceitunas</li>
+                <li>aji molido</li>
+                <li>Pimienta blanca y sal</li>
+                <li>oregano</li>
+                <li>comino</li>
+                <li>pimenton</li>
+                <li>cebolla de verdeo</li>
+            </ul>
         </div>
-        <div class="adelante botones">
-            &#62
-        </div>
+    </section>
 
-        <img src="imagenes/comidas Argentinas/empanadas.png" alt="empanadas" id="imagen">
-    </div>
+    <section class="contenedor2">
+        <div>
+            <div class="atras botones">
+                &#60
+            </div>
+            <div class="adelante botones">
+                &#62
+            </div>
+
+            <img src="imagenes/comidas Argentinas/empanadas.png" alt="empanadas" id="imagen">
+        </div>
+    </section>
 
     <h2>Locro</h2>
     <div class="textos">
@@ -208,38 +211,43 @@
             está muy condimentado, como el locro con ají cumbarí como ocurre en ciertas zonas del Noroeste argentino y
             en especial en ciertas zonas de la provincia argentina de La Rioja </p>
     </div>
-    <div class="ingres">
-        <h3>Ingredientes para el locro</h3>
-        <ul>
-            <li>300 gr de maíz blanco partido</li>
-            <li>00 gr de poroto pallares blanco</li>
-            <li>200 gr de panceta</li>
-            <li>150 gr de chorizo criollo</li>
-            <li>1/2 chorizo colorado</li>
-            <li>200 gr de pechito de cerdo</li>
-            <li>200 gr de falda</li>
-            <li>1 cebolla</li>
-            <li>500 gr de calabaza</li>
-        </ul>
-        <h3>Ingredientes para la salsa picante</h3>
-        <ul>
-            <li>100 g de cebolla de verdeo picada</li>
-            <li>1 taza de aceite mezcla</li>
-            <li>Pimentón y ají molido a gusto</li>
-            <li>1/2 taza de agua</li>
 
-        </ul>
-    </div>
+    <section class="ingres">
+        <div>
+            <h3>Ingredientes para el locro</h3>
+            <ul>
+                <li>300 gr de maíz blanco partido</li>
+                <li>00 gr de poroto pallares blanco</li>
+                <li>200 gr de panceta</li>
+                <li>150 gr de chorizo criollo</li>
+                <li>1/2 chorizo colorado</li>
+                <li>200 gr de pechito de cerdo</li>
+                <li>200 gr de falda</li>
+                <li>1 cebolla</li>
+                <li>500 gr de calabaza</li>
+            </ul>
+            <h3>Ingredientes para la salsa picante</h3>
+            <ul>
+                <li>100 g de cebolla de verdeo picada</li>
+                <li>1 taza de aceite mezcla</li>
+                <li>Pimentón y ají molido a gusto</li>
+                <li>1/2 taza de agua</li>
 
-    <div class="contenedor3">
-        <div class="atras botones">
-            &#60
+            </ul>
         </div>
-        <div class="adelante botones">
-            &#62
+    </section>
+
+    <section class="contenedor3">
+        <div>
+            <div class="atras botones">
+                &#60
+            </div>
+            <div class="adelante botones">
+                &#62
+            </div>
+            <img src="imagenes/comidas Argentinas/locro.png" alt="locrito" id="imagen">
         </div>
-        <img src="imagenes/comidas Argentinas/locro.png" alt="locrito" id="imagen">
-    </div>
+    </section>
 
     <h2>Milanesas</h2>
     <div class="textos">
@@ -258,38 +266,40 @@
         </p>
     </div>
 
-    <div class="ingres">
-        <h3>Ingrediente para la milanesa</h3>
-        <ul>
-            <li>4 huevos</li>
-            <li>2 dientes de ajo</li>
-            <li>Perejil picado</li>
-            <li>Sal y pimienta, a gusto</li>
-            <li>Pan rallado</li>
-            <li>1 kilo de nalga o peceto para milanesa</li>
-        </ul>
-        <h3>Acompañamientos de una milanesa</h3>
-        <ul>
-            <li>En un sandwich</li>
-            <li>A caballo(lleva un huevo arriba de la milanesa)</li>
-            <li>Napolitana(la milanesa lleva salsa y queso)</li>
-            <li>Papas fritas</li>
+    <section class="ingres">
+        <div>
+            <h3>Ingrediente para la milanesa</h3>
+            <ul>
+                <li>4 huevos</li>
+                <li>2 dientes de ajo</li>
+                <li>Perejil picado</li>
+                <li>Sal y pimienta, a gusto</li>
+                <li>Pan rallado</li>
+                <li>1 kilo de nalga o peceto para milanesa</li>
+            </ul>
+            <h3>Acompañamientos de una milanesa</h3>
+            <ul>
+                <li>En un sandwich</li>
+                <li>A caballo(lleva un huevo arriba de la milanesa)</li>
+                <li>Napolitana(la milanesa lleva salsa y queso)</li>
+                <li>Papas fritas</li>
 
-        </ul>
-
-
-    </div>
-    <div class="contenedor4">
-        <div class="atras botones">
-            &#60
+            </ul>
         </div>
-        <div class="adelante botones">
-            &#62
+    </section>
+
+    <section class="contenedor4">
+        <div>
+            <div class="atras botones">
+                &#60
+            </div>
+            <div class="adelante botones">
+                &#62
+            </div>
+
+            <img src="imagenes/comidas Argentinas/milanesas-a-caballo.jpg" alt="milanga" id="imagen">
         </div>
-
-        <img src="imagenes/comidas Argentinas/milanesas-a-caballo.jpg" alt="milanga" id="imagen">
-    </div>
-
+    </section>
 
 </body>
 
